--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:e2e-unspec": "MOCHAWESOME_REPORTFILENAME=e2e-unspec npx codeceptjs run-workers --suites 4 --grep @e2e-unspec --reporter mocha-multi --verbose",
     "test:api-sdo": "MOCHAWESOME_REPORTFILENAME=api-sdo npx codeceptjs run-workers --suites 4 --grep @api-sdo --reporter mocha-multi --verbose",
     "test:api-r2-sdo": "MOCHAWESOME_REPORTFILENAME=api-r2-sdo npx codeceptjs run-workers --suites 4 --grep @api-r2-sdo --reporter mocha-multi --verbose",
-    "test:api-sd": "MOCHAWESOME_REPORTFILENAME=api-sd npx codeceptjs run-workers --suites 4 --grep @api-sd --reporter mocha-multi --verbose",
+    "test:api-settle-discont": "MOCHAWESOME_REPORTFILENAME=api-settle-discont npx codeceptjs run-workers --suites 4 --grep @api-settle-discont --reporter mocha-multi --verbose",
     "test:api-toc": "MOCHAWESOME_REPORTFILENAME=api-toc npx codeceptjs run-workers --suites 4 --grep @api-toc --reporter mocha-multi --verbose",
     "test:e2e-sdo": "MOCHAWESOME_REPORTFILENAME=e2e-sdo npx codeceptjs run-workers --suites 3 --grep @e2e-sdo --reporter mocha-multi --verbose",
     "test:api-dj": "MOCHAWESOME_REPORTFILENAME=api-dj npx codeceptjs  run-workers --suites 4  --grep @api-dj --reporter mocha-multi --verbose",
