--- a/charts/civil-ccd/values.template.yaml
+++ b/charts/civil-ccd/values.template.yaml
@@ -30,7 +30,8 @@ civil-general-applications:
       civil-gen-apps:
         resourceGroup: civil
         secrets:
-          - microservicekey-civil-general-applications
+          - name: microservicekey-civil-general-applications
+            alias: idam.s2s-auth.totp_secret
     environment:
       CORE_CASE_DATA_API_URL: http://${SERVICE_NAME}-ccd-data-store-api
       OIDC_ISSUER: https://forgerock-am.service.core-compute-idam-aat2.internal:8443/openam/oauth2/realms/root/realms/hmcts
