--- a/ccd-definition/ComplexTypes/ReasonNotSuitableSDO-SDO-TOC.json
+++ b/ccd-definition/ComplexTypes/ReasonNotSuitableSDO-SDO-TOC.json
@@ -20,6 +20,7 @@
     "ListElementCode": "input",
     "FieldType": "TextArea",
     "ElementLabel": " ",
+    "Max": 4000,
     "SecurityClassification": "Public",
     "Searchable": "N"
   }
