try older xui image

--- a/charts/civil-ccd/values.template.yaml
+++ b/charts/civil-ccd/values.template.yaml
@@ -214,14 +214,14 @@ xui-webapp:
   nodejs:
     imagePullPolicy: Always
     releaseNameOverride: ${SERVICE_NAME}-xui-webapp
-    image: hmctspublic.azurecr.io/xui/webapp:pr-3689
-    memoryRequests: 2Gi
+    image: hmctspublic.azurecr.io/xui/webapp:latest
+    memoryRequests: 3Gi
     cpuRequests: 2000m
     memoryLimits: 4Gi
     cpuLimits: 3500m
-    devmemoryRequests: 6Gi
+    devmemoryRequests: 8Gi
     devcpuRequests: 2000m
-    devmemoryLimits: 8Gi
+    devmemoryLimits: 10Gi
     devcpuLimits: 4500m
     environment:
       HEALTH_CCD_COMPONENT_API: http://${SERVICE_NAME}-ccd-api-gw/health
