--- a/charts/civil-ccd/values.template.yaml
+++ b/charts/civil-ccd/values.template.yaml
@@ -214,7 +214,7 @@ xui-webapp:
   nodejs:
     imagePullPolicy: Always
     releaseNameOverride: ${SERVICE_NAME}-xui-webapp
-    image: hmctspublic.azurecr.io/xui/webapp:latest
+    image: hmctspublic.azurecr.io/xui/webapp:prod-061bcd2-20240731132727
     memoryRequests: 2Gi
     cpuRequests: 2000m
     memoryLimits: 4Gi
