--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "test:functional": "./e2e/run-functional-tests.sh",
     "test:sdo": "MOCHAWESOME_REPORTFILENAME=functional npx codeceptjs run --grep @sdo --reporter mocha-multi --verbose",
     "test:refunds": "MOCHAWESOME_REPORTFILENAME=functional CCD_UI_TESTS=true npx codeceptjs run --grep '@refunds' --reporter mocha-multi --verbose",
+    "test:localAHN": "MOCHAWESOME_REPORTFILENAME=functional npx codeceptjs run --grep '@localAHN' --reporter mocha-multi --verbose",
     "generate-dev": "./bin/build-release-ccd-definition.sh local",
     "upload-wa": "yarn generate-dev && USER_TOKEN=$(${WA_KUBE_ENV_PATH}/scripts/actions/idam-user-token.sh) && SERVICE_TOKEN=$(${WA_KUBE_ENV_PATH}/scripts/actions/idam-service-token.sh) && curl http://ccd-definition-store-api/import -H \"Authorization: Bearer ${USER_TOKEN}\" -H \"ServiceAuthorization: Bearer ${SERVICE_TOKEN}\" -F file=\"@build/ccd-release-config/civil-ccd-local.xlsx\" && echo ''",
     "test:api-prod": "MOCHAWESOME_REPORTFILENAME=api-master-prod npx codeceptjs  run-workers --suites 8 --grep @api-prod --reporter mocha-multi --verbose",
