--- a/charts/civil-ccd/values.template.yaml
+++ b/charts/civil-ccd/values.template.yaml
@@ -248,6 +248,18 @@ xui-webapp:
       REDISCLOUD_URL: http://dummyrediscloudurl
       UV_THREADPOOL_SIZE: 128
       PROTOCOL: http
+    keyVaults:
+      rpx:
+        resourceGroup: rpx
+        secrets:
+          - name: mc-s2s-client-secret
+            alias: mc-s2s-client-secret
+          - name: mc-idam-client-secret
+            alias: mc-idam-client-secret
+          - name: system-user-name
+            alias: system-user-name
+          - name: system-user-password
+            alias: system-user-password
 ccd:
   ccd:
     adminWeb:
