--- a/charts/civil-ccd/values.template.yaml
+++ b/charts/civil-ccd/values.template.yaml
@@ -242,8 +242,8 @@ xui-webapp:
       FEATURE_TERMS_AND_CONDITIONS_ENABLED: false
       FEATURE_HELMET_ENABLED: false
       FEATURE_OIDC_ENABLED: false
-      FEATURE_WORKALLOCATION_ENABLED: true
-      FEATURE_ACCESS_MANAGEMENT_ENABLED: true
+      FEATURE_WORKALLOCATION_ENABLED: false
+      FEATURE_ACCESS_MANAGEMENT_ENABLED: false
       FEATURE_SUBSTANTIVE_ROLE_ENABLED: true
       REDISCLOUD_URL: http://dummyrediscloudurl
       UV_THREADPOOL_SIZE: 128
