--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:e2e-unspec": "MOCHAWESOME_REPORTFILENAME=e2e-unspec npx codeceptjs run-workers --suites 4 --grep @e2e-unspec --reporter mocha-multi --verbose",
     "test:api-sdo": "MOCHAWESOME_REPORTFILENAME=api-sdo npx codeceptjs run-workers --suites 4 --grep @api-sdo --reporter mocha-multi --verbose",
     "test:api-r2-sdo": "MOCHAWESOME_REPORTFILENAME=api-r2-sdo npx codeceptjs run-workers --suites 4 --grep @api-r2-sdo --reporter mocha-multi --verbose",
+    "test:api-pr-test": "MOCHAWESOME_REPORTFILENAME=api-pr-test npx codeceptjs run-workers --suites 4 --grep @api-pr-test --reporter mocha-multi --verbose",
     "test:api-settle-discont": "MOCHAWESOME_REPORTFILENAME=api-settle-discont npx codeceptjs run-workers --suites 4 --grep @api-settle-discont --reporter mocha-multi --verbose",
     "test:api-toc": "MOCHAWESOME_REPORTFILENAME=api-toc npx codeceptjs run-workers --suites 4 --grep @api-toc --reporter mocha-multi --verbose",
     "test:e2e-sdo": "MOCHAWESOME_REPORTFILENAME=e2e-sdo npx codeceptjs run-workers --suites 3 --grep @e2e-sdo --reporter mocha-multi --verbose",
@@ -59,7 +60,7 @@
     "test:crossbrowser": "./e2e/run-crossbrowser-tests.sh",
     "test:AATFunctional": "./e2e/run-prod-functional-tests.sh",
     "test:DemoFunctional": "./e2e/run-features-flag-enabled-full-functional-tests",
-    "test:fullfunctional": "yarn playwright install && MOCHAWESOME_REPORTFILENAME=functional-unspec npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-prod' --reporter mocha-multi --verbose",
+    "test:fullfunctional": "yarn playwright install && MOCHAWESOME_REPORTFILENAME=functional-unspec npx codeceptjs run-workers --suites 2 --grep '@api-pr-test' --reporter mocha-multi --verbose",
     "test:e2e-nightly-prod": "MOCHAWESOME_REPORTFILENAME=non-prod-e2e-ft npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-prod' --reporter mocha-multi --verbose",
     "test:api-nightly-prod": "MOCHAWESOME_REPORTFILENAME=non-prod-e2e-ft npx codeceptjs run-workers --suites 8 --grep '@api-nightly-prod' --reporter mocha-multi --verbose",
     "test:e2e-nightly-nonprod": "MOCHAWESOME_REPORTFILENAME=non-prod-e2e-ft npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-nonprod' --reporter mocha-multi --verbose",
