adding ccd admin pod

--- a/charts/civil-ccd/values.preview.template.yaml
+++ b/charts/civil-ccd/values.preview.template.yaml
@@ -106,6 +106,8 @@ idam-pr:
   redirect_uris:
     XUI:
       - https://xui-${SERVICE_FQDN}/oauth2/callback
+    CCD Admin:
+      - http://${SERVICE_NAME}-ccd-admin-web/oauth2redirect
 
 aac-manage-case-assignment:
   java:
