--- a/charts/civil-ccd/values.elasticsearch.preview.template.yaml
+++ b/charts/civil-ccd/values.elasticsearch.preview.template.yaml
@@ -109,3 +109,8 @@ ts-translation-service:
     keyVaults: [ ]
     environment:
       TS_TRANSLATION_SERVICE_DB_HOST: ${SERVICE_NAME}-postgresql
+      TS_TRANSLATION_SERVICE_DB_NAME: ts_translation_service
+      TS_TRANSLATION_SERVICE_DB_USERNAME: hmcts
+      TS_TRANSLATION_SERVICE_DB_PASSWORD: hmcts
+      TS_TRANSLATION_SERVICE_DB_PORT: 5432
+      TS_TRANSLATION_SERVICE_DB_OPTIONS: ?stringtype=unspecified
