few additional changes

--- a/charts/civil-ccd/values.elasticsearch.preview.template.yaml
+++ b/charts/civil-ccd/values.elasticsearch.preview.template.yaml
@@ -105,6 +105,7 @@ civil-translation:
 ts-translation-service:
   java:
     releaseNameOverride: ${SERVICE_NAME}-translation-service
+    ingressHost: ts-${SERVICE_FQDN}
     imagePullPolicy: Always
     keyVaults: [ ]
     environment:
