--- a/charts/civil-ccd/values.preview.template.yaml
+++ b/charts/civil-ccd/values.preview.template.yaml
@@ -120,6 +120,7 @@ xui-webapp:
     environment:
       SERVICES_WORK_ALLOCATION_TASK_API: http://{{ .Release.Name }}-wa-task-management-api
       SERVICES_WA_WORKFLOW_API_URL: http://wa-workflow-api-${SERVICE_FQDN}
+      SERVICES_TRANSLATION_API_URL: http://${SERVICE_NAME}-translation-service
 ccd:
   global:
     postgresUsername: hmcts
