DTSCCI-788 add camename in ga for manage case

--- a/ccd-definition/ComplexTypes/GeneralApplicationGAspec.json
+++ b/ccd-definition/ComplexTypes/GeneralApplicationGAspec.json
@@ -348,5 +348,13 @@
     "ElementLabel": " ",
     "SecurityClassification": "Public",
     "Searchable": "N"
+  },
+  {
+    "ID": "GeneralApplicationGAspec",
+    "ListElementCode": "caseNameGaInternal",
+    "FieldType": "Text",
+    "ElementLabel": " ",
+    "SecurityClassification": "Public",
+    "Searchable": "N"
   }
 ]
