--- a/package.json
+++ b/package.json
@@ -86,9 +86,12 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@playwright/test": "^1.47.1",
+    "@types/node": "^22.5.5",
     "chai": "^4.3.4",
     "codeceptjs": "^3.5.11",
     "deep-equal-in-any-order": "^1.0.28",
+    "dotenv": "^16.4.5",
     "eslint": "^8.20.0",
     "eslint-plugin-codeceptjs": "^1.3.0",
     "faker": "^5.5.3",
