--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.0",
     "@playwright/test": "^1.47.1",
     "@types/node": "^22.5.5",
     "chai": "^4.3.4",
@@ -106,6 +107,7 @@
     "node-fetch": "^2.6.9",
     "playwright": "^1.41.1",
     "totp-generator": "^0.0.14",
+    "typescript": "^5.6.2",
     "uuid": "^3.4.0",
     "webdriverio": "^6.12.1"
   },
