--- a/package.json
+++ b/package.json
@@ -87,15 +87,17 @@
   "license": "MIT",
   "devDependencies": {
     "@axe-core/playwright": "^4.10.0",
+    "@eslint/js": "^9.11.0",
     "@playwright/test": "^1.47.1",
     "@types/node": "^22.5.5",
     "chai": "^4.3.4",
     "codeceptjs": "^3.5.11",
     "deep-equal-in-any-order": "^1.0.28",
     "dotenv": "^16.4.5",
-    "eslint": "^8.20.0",
+    "eslint": "^9.11.0",
     "eslint-plugin-codeceptjs": "^1.3.0",
     "faker": "^5.5.3",
+    "globals": "^15.9.0",
     "html_codesniffer": "^2.5.1",
     "husky": "^7.0.2",
     "lodash": "^4.17.21",
@@ -109,6 +111,7 @@
     "playwright-core": "^1.47.2",
     "totp-generator": "^0.0.14",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.6.0",
     "uuid": "^3.4.0",
     "webdriverio": "^6.12.1"
   },
