--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-codeceptjs": "^1.3.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "faker": "^5.5.3",
     "globals": "^15.9.0",
     "html_codesniffer": "^2.5.1",
