--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "description": "Civil e2e tests",
   "scripts": {
-    "lint": "eslint e2e",
+    "lint": "eslint && yarn lint:no-dup-classes",
+    "lint:no-dup-classes": "eslint --config ./custom-eslint-configs/no-dup-classes.config.mjs",
+    "lint:fix": "eslint . --fix",
+    "prettier:fix": "prettier -w .",
     "setup": "echo yarn:setup",
     "yarn-update": "yarn set version 3.x",
     "install-dependencies": "/usr/bin/yarn install --immutable --silent",
@@ -92,10 +95,13 @@
     "@types/node": "^22.5.5",
     "chai": "^4.3.4",
     "codeceptjs": "^3.5.11",
+    "custom-eslint-plugin": "file:plugins/custom-eslint-plugins",
     "deep-equal-in-any-order": "^1.0.28",
     "dotenv": "^16.4.5",
     "eslint": "^9.11.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-codeceptjs": "^1.3.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "faker": "^5.5.3",
     "globals": "^15.9.0",
     "html_codesniffer": "^2.5.1",
