--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
   "trailingComma": "all",
   "overrides": [
     {
-      "files": "*.spec.ts",
+      "files": ["*.spec.ts", "playwright-e2e/playwright-fixtures/**/*.ts"],
       "options": {
         "arrowParens": "always",
         "trailingComma": "none",
