--- a/package.json
+++ b/package.json
@@ -93,6 +93,9 @@
     "@eslint/js": "^9.11.0",
     "@playwright/test": "^1.47.1",
     "@types/node": "^22.5.5",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "chai": "^4.3.4",
     "codeceptjs": "^3.5.11",
     "custom-eslint-plugin": "file:plugins/custom-eslint-plugins",
