--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
     "faker": "^5.5.3",
     "globals": "^15.9.0",
     "html_codesniffer": "^2.5.1",
-    "husky": "^7.0.2",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.10",
     "lodash": "^4.17.21",
     "mocha": "9.2.2",
     "mocha-junit-reporter": "^2.0.2",
@@ -123,6 +124,12 @@
     "typescript-eslint": "^8.6.0",
     "uuid": "^3.4.0",
     "webdriverio": "^6.12.1"
+  },
+  "lint-staged": {
+    "*": [
+      "prettier -w .",
+      "eslint"
+    ]
   },
   "resolutions": {
     "minimatch": "^3.0.5"
