--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
   },
   "lint-staged": {
     "playwright-e2e/**/*.{ts,tsx}": "prettier --write",
-    "*": "eslint"
+    "**/*.{ts,tsx,js,mjs,cjs}": "eslint"
   },
   "resolutions": {
     "minimatch": "^3.0.5"
