--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,16 @@ charts/civil-ccd/Chart.lock
 /test-results/
 /playwright-report/
 /blob-report/
-/playwright/.cache/
+playwright/.cache/
+
+# Playwright
+test-results/
+allure-results/
+allure-functional-results/
+allure-bootstrap-results/
+allure-report/
+allure-functional-report/
+allure-bootstrap-report/
+playwright-report/
+/playwright-e2e/fixtures/.users/
+/playwright-e2e/fixtures/.user-cookies/
