--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.9",
     "playwright": "^1.41.1",
+    "playwright-core": "^1.47.2",
     "totp-generator": "^0.0.14",
     "typescript": "^5.6.2",
     "uuid": "^3.4.0",
