--- a/package.json
+++ b/package.json
@@ -104,7 +104,6 @@
     "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-codeceptjs": "^1.3.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "faker": "^5.5.3",
     "globals": "^15.9.0",
     "html_codesniffer": "^2.5.1",
@@ -118,6 +117,7 @@
     "node-fetch": "^2.6.9",
     "playwright": "^1.41.1",
     "playwright-core": "^1.47.2",
+    "prettier": "^3.3.3",
     "totp-generator": "^0.0.14",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.6.0",
