DTSCCI-927 hide Default Judgement spec journey behind a feature flag

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
   mavenCentral()
   mavenLocal()
   maven { url 'https://jitpack.io' }
+  jcenter()
 }
 
 task highLevelDataSetup(type: JavaExec) {
