--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Civil e2e tests",
   "scripts": {
     "lint": "./bin/run-commands-series.sh -c \"eslint\" \"lint:no-dup-classes\"",
+    "lint:staged:no-dup-classes": "./bin/run-commands-series.sh -c \"lint-staged\" \"lint:no-dup-classes\"",
     "lint:no-dup-classes": "eslint --config ./custom-eslint-configs/no-dup-classes.config.mjs",
-    "lint:staged": "./bin/run-commands-series.sh -c \"lint-staged\" \"lint:no-dup-classes\"",
+    "pre-commit": "./.husky/pre-commit",
     "lint:fix": "eslint . --fix",
     "prettier:fix": "prettier -w 'playwright-e2e/**/*.ts'",
     "setup": "echo yarn:setup",
@@ -94,6 +95,7 @@
     "@eslint/js": "^9.11.0",
     "@playwright/test": "^1.47.1",
     "@types/node": "^22.5.5",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/eslint-plugin-tslint": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
