adding playwright projects for setting up user data and cookies for quick authentication during tests

--- a/.env
+++ b/.env
@@ -1,1 +1,20 @@
-SERVER_PORT=4000
+DEFAULT_PASSWORD=Password12!
+JUDGE_DEFAULT_PASSWORD=Hmcts1234
+IAC_DEFAULT_PASSWORD=AldgateT0wer
+
+#AAT
+URL = https://manage-case.aat.platform.hmcts.net/
+SERVICE_AUTH_PROVIDER_API_BASE_URL = http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
+CCD_DATA_STORE_URL = http://ccd-data-store-api-aat.service.core-compute-aat.internal
+DM_STORE_URL = http://dm-store-aat.service.core-compute-aat.internal
+IDAM_WEB_URL = https://idam-web-public.aat.platform.hmcts.net
+IDAM_API_URL = https://idam-api.aat.platform.hmcts.net
+CIVIL_SERVICE_URL = http://civil-service-aat.service.core-compute-aat.internal
+WA_TASK_MGMT_URL = http://wa-task-management-api-aat.service.core-compute-aat.internal
+
+SHOW_BROWSER_WINDOW=true
+IDAM_STUB_ENABLED=false
+RUN_ACCESSIBILITY_TESTS=false
+UI_SOFT_EXPECT=false
+RUN_SETUP=true
+S2S_SECRET=BTZQFPGY4TUMAFGL
