--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ bin/main/application.yaml
 
 .DS_Store
 
+# dotenv environment variables file
+.env
+.env.test
 
 # node_modules
 package-lock.json
@@ -42,3 +45,19 @@ charts/civil-ccd/Chart.lock
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+/test-results/
+/playwright-report/
+/blob-report/
+playwright/.cache/
+
+# Playwright
+test-results/
+allure-results/
+allure-functional-results/
+allure-bootstrap-results/
+allure-report/
+allure-functional-report/
+allure-bootstrap-report/
+playwright-report/
+/playwright-e2e/fixtures/.users/
+/playwright-e2e/fixtures/.user-cookies/
