--- a/ccd-definition/ComplexTypes/GeneralApplicationGAspec-GA-CUI-nonprod.json
+++ b/ccd-definition/ComplexTypes/GeneralApplicationGAspec-GA-CUI-nonprod.json
@@ -14,5 +14,13 @@
     "ElementLabel": " ",
     "SecurityClassification": "Public",
     "Searchable": "N"
+  },
+  {
+    "ID": "GeneralApplicationGAspec",
+    "ListElementCode": "certOfSC",
+    "FieldType": "CertOfSC",
+    "ElementLabel": " ",
+    "SecurityClassification": "Public",
+    "Searchable": "N"
   }
 ]
