--- a/ccd-definition/ComplexTypes/GeneralApplicationGAspec-GA-CUI-nonprod.json
+++ b/ccd-definition/ComplexTypes/GeneralApplicationGAspec-GA-CUI-nonprod.json
@@ -22,5 +22,13 @@
     "ElementLabel": " ",
     "SecurityClassification": "Public",
     "Searchable": "N"
+  },
+  {
+    "ID": "GeneralApplicationGAspec",
+    "ListElementCode": "generalAppTypeLR",
+    "FieldType": "GATypeGAspecLR",
+    "ElementLabel": " ",
+    "SecurityClassification": "Public",
+    "Searchable": "N"
   }
 ]
