--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "playwright-core": "^1.47.2",
     "prettier": "^3.3.3",
     "totp-generator": "^1.0.0",
-    "typescript": "^5.4.5",
+    "typescript": "5.1.3",
     "typescript-eslint": "8.0.0",
     "uuid": "^3.4.0",
     "webdriverio": "^6.12.1"
