DTSCCI-813 config to delete definitions on HMC deployment

--- a/charts/civil-ccd/values.enableHmc.preview.template.yaml
+++ b/charts/civil-ccd/values.enableHmc.preview.template.yaml
@@ -10,7 +10,7 @@ civil-service:
       HMC_HEARINGS_TOPIC_NAME: hmc-to-cft-aat
       HMC_HEARINGS_TOPIC_NAMESPACE: hmc-servicebus-aat
       HMC_HEARINGS_TOPIC_POLICY_NAME: SendAndListenSharedAccessKey
-      HMC_HEARINGS_TOPIC_SUBSCRIPTION_NAME: hmc-to-civil-subscription-aat
+      HMC_HEARINGS_TOPIC_SUBSCRIPTION_NAME: "hmc-to-civil-subscription-pr-${CHANGE_ID}"
       HMC_HEARINGS_TOPIC_THREAD_COUNT: 4
 
 civil-general-applications:
@@ -27,3 +27,9 @@ xui-webapp:
       SERVICES_CCD_COMPONENT_API: https://gateway-ccd.aat.platform.hmcts.net
       SERVICES_EM_ANNO_API: https://gateway-ccd.aat.platform.hmcts.net
       SERVICES_CCD_DATA_STORE_API: http://ccd-data-store-api-aat.service.core-compute-aat.internal
+
+ccd-def-cleanup:
+  enabled: true
+  change_id: ${CHANGE_ID}
+  case_type_ids:
+    - CIVIL
