--- a/charts/civil-ccd/Chart.yaml
+++ b/charts/civil-ccd/Chart.yaml
@@ -56,3 +56,8 @@ dependencies:
     version: 0.1.7
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: civil-translation.enabled
+## CCD AAT Definition cleanup for HMC deployments in Preview
+  - name: ccd-def-cleanup
+    version: 9.0.0
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: ccd-def-cleanup.enabled
