DTSCCI-813 config to delete definitions on HMC deployment

--- a/charts/civil-ccd/values.enableHmc.preview.template.yaml
+++ b/charts/civil-ccd/values.enableHmc.preview.template.yaml
@@ -10,7 +10,8 @@ civil-service:
       HMC_HEARINGS_TOPIC_NAME: hmc-to-cft-aat
       HMC_HEARINGS_TOPIC_NAMESPACE: hmc-servicebus-aat
       HMC_HEARINGS_TOPIC_POLICY_NAME: SendAndListenSharedAccessKey
-      HMC_HEARINGS_TOPIC_SUBSCRIPTION_NAME: "hmc-to-civil-subscription-pr-${CHANGE_ID}"
+#      HMC_HEARINGS_TOPIC_SUBSCRIPTION_NAME: "hmc-to-civil-subscription-pr-${CHANGE_ID}"
+      HMC_HEARINGS_TOPIC_SUBSCRIPTION_NAME: "hmc-to-civil-subscription-aat"
       HMC_HEARINGS_TOPIC_THREAD_COUNT: 4
 
 civil-general-applications:
