--- a/ccd-definition/CaseEventToFields/InitiateApplicationGAspec-prod.json
+++ b/ccd-definition/CaseEventToFields/InitiateApplicationGAspec-prod.json
@@ -1,6 +1,6 @@
 [
   {
-    "CaseTypeID": "CIVIL",
+    "CaseTypeID": "CIVIL${CCD_DEF_VERSION}",
     "CaseEventID": "INITIATE_GENERAL_APPLICATION",
     "CaseFieldID": "generalAppType",
     "DisplayContext": "COMPLEX",
@@ -12,7 +12,7 @@
     "CallBackURLMidEvent": "${CCD_DEF_CASE_SERVICE_BASE_URL}/cases/callbacks/mid/ga-validate-type"
   },
   {
-    "CaseTypeID": "CIVIL",
+    "CaseTypeID": "CIVIL${CCD_DEF_VERSION}",
     "CaseEventID": "INITIATE_GENERAL_APPLICATION",
     "CaseFieldID": "generalAppParentClaimantIsApplicant",
     "DisplayContext": "READONLY",
@@ -25,7 +25,7 @@
     "PageShowCondition": "generalAppVaryJudgementType=\"Yes\" AND generalAppParentClaimantIsApplicant=\"No\""
   },
   {
-    "CaseTypeID": "CIVIL",
+    "CaseTypeID": "CIVIL${CCD_DEF_VERSION}",
     "CaseEventID": "INITIATE_GENERAL_APPLICATION",
     "CaseFieldID": "generalAppVaryJudgementType",
     "DisplayContext": "READONLY",
