--- a/charts/civil-ccd/values.enableHmc.preview.template.yaml
+++ b/charts/civil-ccd/values.enableHmc.preview.template.yaml
@@ -28,3 +28,15 @@ xui-webapp:
       SERVICES_CCD_COMPONENT_API: https://gateway-ccd.aat.platform.hmcts.net
       SERVICES_EM_ANNO_API: https://gateway-ccd.aat.platform.hmcts.net
       SERVICES_CCD_DATA_STORE_API: http://ccd-data-store-api-aat.service.core-compute-aat.internal
+
+servicebus:
+  enabled: true
+  resourceGroup: hmc-shared-aat
+  sbNamespace: hmc-servicebus-aat
+  #Each topic/queue matches up to one used in the config above
+  setup:
+    topics:
+      - name: hmc-to-cft-aat
+        subscriptionNeeded: yes
+    queues:
+      - name: tribunals-to-hearing-api
