--- a/ccd-definition/CaseEventToComplexTypes/InitiateApplicationGAspec.json
+++ b/ccd-definition/CaseEventToComplexTypes/InitiateApplicationGAspec.json
@@ -1,5 +1,15 @@
 [
   {
+    "ID": "GATypePage",
+    "CaseEventID": "INITIATE_GENERAL_APPLICATION",
+    "CaseFieldID": "generalAppType",
+    "ListElementCode": "types",
+    "EventElementLabel": "  ",
+    "EventHintText": "  ",
+    "FieldDisplayOrder": 1,
+    "DisplayContext": "MANDATORY"
+  },
+  {
     "ID": "GARespondentAgreementPage",
     "CaseEventID": "INITIATE_GENERAL_APPLICATION",
     "CaseFieldID": "generalAppRespondentAgreement",
