--- a/ccd-definition/CaseEventToFields/InitiateApplicationGAspec.json
+++ b/ccd-definition/CaseEventToFields/InitiateApplicationGAspec.json
@@ -12,7 +12,7 @@
     "CallBackURLMidEvent": "${CCD_DEF_CASE_SERVICE_BASE_URL}/cases/callbacks/mid/ga-validate-type"
   },
   {
-    "CaseTypeID": "CIVIL",
+    "CaseTypeID": "CIVIL${CCD_DEF_VERSION}",
     "CaseEventID": "INITIATE_GENERAL_APPLICATION",
     "CaseFieldID": "generalAppHearingDate",
     "DisplayContext": "COMPLEX",
@@ -37,7 +37,7 @@
     "PageShowCondition": "generalAppVaryJudgementType=\"Yes\" AND generalAppParentClaimantIsApplicant=\"No\""
   },
   {
-    "CaseTypeID": "CIVIL",
+    "CaseTypeID": "CIVIL${CCD_DEF_VERSION}",
     "CaseEventID": "INITIATE_GENERAL_APPLICATION",
     "CaseFieldID": "gaUploadN245FormUploadLabel",
     "DisplayContext": "COMPLEX",
@@ -107,7 +107,7 @@
     "PageShowCondition": "generalAppRespondentAgreement.hasAgreed=\"No\" AND generalAppVaryJudgementType=\"No\""
   },
   {
-    "CaseTypeID": "CIVIL",
+    "CaseTypeID": "CIVIL${CCD_DEF_VERSION}",
     "CaseEventID": "INITIATE_GENERAL_APPLICATION",
     "CaseFieldID": "generalAppDetailsOfOrder",
     "DisplayContext": "MANDATORY",
