setup allure reports for playwright

--- a/package.json
+++ b/package.json
@@ -96,6 +96,10 @@
     "test:api-multi-intermediate-unspec": "MOCHAWESOME_REPORTFILENAME=api-multi-intermediate-unspec npx codeceptjs  run-workers --suites 4 --grep @api-unspec-multi-intermediate --reporter mocha-multi --verbose",
     "test:e2e-hearing-request": "MOCHAWESOME_REPORTFILENAME=e2e-hearing-request npx codeceptjs run-workers --suites 4 --grep @e2e-hearing-request --reporter mocha-multi --verbose",
     "test:AHN": "MOCHAWESOME_REPORTFILENAME=automated-hearing-notice-scheduler npx codeceptjs run --grep '@AHN' --reporter mocha-multi --verbose",
+    "test:playwright-functional:generate-report": "allure generate allure-functional-results --clean -o allure-functional-report",
+    "test:playwright-bootstrap:generate-report": "allure generate allure-bootstrap-results --clean -o allure-bootstrap-report",
+    "test:playwright-functional:open-report": "allure open allure-functional-report",
+    "test:playwright-bootstrap:open-report": "allure open allure-bootstrap-report",
     "prepare": "husky"
   },
   "license": "MIT",
@@ -107,6 +111,8 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/eslint-plugin-tslint": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
+    "allure-commandline": "^2.30.0",
+    "allure-playwright": "^3.0.5",
     "chai": "^4.3.4",
     "codeceptjs": "^3.5.11",
     "concurrently": "^9.0.1",
