update 'allure' folders names

--- a/package.json
+++ b/package.json
@@ -99,10 +99,10 @@
     "test:api-multi-intermediate-unspec": "MOCHAWESOME_REPORTFILENAME=api-multi-intermediate-unspec npx codeceptjs  run-workers --suites 4 --grep @api-unspec-multi-intermediate --reporter mocha-multi --verbose",
     "test:e2e-hearing-request": "MOCHAWESOME_REPORTFILENAME=e2e-hearing-request npx codeceptjs run-workers --suites 4 --grep @e2e-hearing-request --reporter mocha-multi --verbose",
     "test:AHN": "MOCHAWESOME_REPORTFILENAME=automated-hearing-notice-scheduler npx codeceptjs run --grep '@AHN' --reporter mocha-multi --verbose",
-    "test:playwright-functional:generate-report": "allure generate allure-functional-results --clean -o allure-functional-report",
-    "test:playwright-bootstrap:generate-report": "allure generate allure-bootstrap-results --clean -o allure-bootstrap-report",
-    "test:playwright-functional:open-report": "allure open allure-functional-report",
-    "test:playwright-bootstrap:open-report": "allure open allure-bootstrap-report",
+    "test:playwright-functional:generate-report": "allure generate playwright-allure-functional-results --clean -o playwright-allure-functional-report",
+    "test:playwright-bootstrap:generate-report": "allure generate playwright-allure-bootstrap-results --clean -o playwright-allure-bootstrap-report",
+    "test:playwright-functional:open-report": "allure open playwright-allure-functional-report",
+    "test:playwright-bootstrap:open-report": "allure open playwright-allure-bootstrap-report",
     "prepare": "husky"
   },
   "license": "MIT",
