update playwright commands

--- a/package.json
+++ b/package.json
@@ -68,11 +68,11 @@
     "test:playwright-setup:users:ci": "npx playwright test --project users-setup --pass-with-no-tests --no-deps",
     "test:playwright-setup:users-auth:ci": "npx playwright test --project users-auth-setup --pass-with-no-tests --no-deps",
     "test:playwright-e2e-setup:ci": "yarn test:playwright-setup:users:ci && yarn test:playwright-setup:users-auth:ci",
-    "test:playwright-e2e-nightly:ci": "FUNCTIONAL=true npx playwright test --project full-functional --no-deps",
+    "test:playwright-e2e-nightly:ci": "FUNCTIONAL=true npx playwright test --project e2e-full-functional --no-deps",
     "test:playwright-teardown:users-auth:ci": "npx playwright test --project users-auth-teardown --pass-with-no-tests --no-deps",
     "test:playwright-e2e-teardown:ci": "./bin/run-commands-series.sh -c \"test:playwright-teardown:users-auth:ci\" \"ts-node ./playwright-e2e/global/teardown-ci\"",
-    "test:playwright-debug:local": "npx playwright test --project full-functional --grep @debug",
-    "test:playwright-e2e-functional:local": "npx playwright test --project full-functional",
+    "test:playwright-debug:local": "npx playwright test --grep @debug",
+    "test:playwright-e2e:local": "npx playwright test --project e2e-full-functional",
     "test:fullfunctional": "yarn playwright install && MOCHAWESOME_REPORTFILENAME=functional-unspec npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-prod' --reporter mocha-multi --verbose",
     "test:e2e-nightly-prod": "MOCHAWESOME_REPORTFILENAME=non-prod-e2e-ft npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-prod' --reporter mocha-multi --verbose",
     "test:api-nightly-prod": "MOCHAWESOME_REPORTFILENAME=api-nightly-prod npx codeceptjs run-workers --suites 8 --grep '@api-nightly-prod' --reporter mocha-multi --verbose",
